src/test/ui/type-alias-impl-trait/issue-52843.stderr
error[E0277]: the trait bound `T: Default` is not satisfied
  --> $DIR/issue-52843.rs:7:5
   |
LL |     t
   |     ^ the trait `Default` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | type Foo<T: std::default::Default> = impl Default;
   |           +++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
